fix(bainistigh): fix up some layout issues

--- a/apps/bainistigh/assets/css/components/common/_section_header.scss
+++ b/apps/bainistigh/assets/css/components/common/_section_header.scss
@@ -39,7 +39,6 @@
     border-block-end-color: #{colors.var(separator, $ns: border)};
     font-size: 16px;
     height: 64px;
-    padding-inline-start: calc(264px + 12px);
     top: 35px;
   }
 
