--- a/apps/bainistigh/assets/css/templates/layout/root/_globals.scss
+++ b/apps/bainistigh/assets/css/templates/layout/root/_globals.scss
@@ -33,6 +33,7 @@ body {
 main {
   $header-height: 48px;
   padding-block-start: $header-height;
+  position: relative;
 
   @include media.mouse {
     $header-height: 64px;
