--- a/apps/bainistigh/assets/css/templates/wiki/_index.scss
+++ b/apps/bainistigh/assets/css/templates/wiki/_index.scss
@@ -32,3 +32,13 @@
     }
   }
 }
+
+//
+// Section header
+// -----------------------------------------------------------------------------------------------
+
+section.wiki .section_header {
+  @include media.mouse {
+    padding-inline-start: calc(264px + 12px);
+  }
+}
